Fixed horizontal scroll issue

--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -1,20 +1,14 @@
 .footer {
-  padding: 0 150px;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding: 50px 150px;
   display: flex;
   justify-content: space-between;
 
   @media screen and (max-width: 1250px) {
-    padding: 0 70px;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding: 50px 70px;
   }
 
   @media screen and (max-width: 950px) {
-    padding: 0 20px;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding: 50px 20px;
     display: block;
   }
 
@@ -54,6 +48,9 @@
     .link {
       cursor: pointer;
       transition: all 300ms ease-in-out;
+      background-color: $headerBg;
+      width: 170px;
+      height: 150px;
 
       @media screen and (max-width: 950px) {
         width: 200px;
@@ -61,8 +58,8 @@
       }
 
       @media screen and (max-width: 650px) {
-        height: 100px;
-        width: 100px;
+        height: 90px;
+        width: 90px;
       }
 
       &:hover {
@@ -76,9 +73,6 @@
           margin-right: 1rem;
         }
       }
-      background-color: $headerBg;
-      width: 170px;
-      height: 150px;
 
       a {
         display: flex;
