--- a/styles/_skills.scss
+++ b/styles/_skills.scss
@@ -1,7 +1,7 @@
 .skills {
   background-color: $headerBg;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: 1fr 1fr;
   gap: 0 2rem;
   padding: 50px 150px 50px 150px;
 
@@ -13,9 +13,9 @@
     padding: 50px 20px 50px 20px;
   }
 
-  @media screen and(max-width: 500px) {
+  @media screen and (max-width: 700px) {
     grid-template-columns: 1fr;
-    gap: 0;
+    gap: 0 0;
   }
 
   h1 {
@@ -34,6 +34,8 @@
       margin-bottom: 2rem;
 
       @media screen and (max-width: 450px) {
+        grid-template-columns: 1fr;
+        text-align: center;
         gap: 0.3rem;
       }
 
@@ -61,6 +63,11 @@
             font-size: $fontParagraph;
             font-weight: 500;
             margin-left: 0.5rem;
+
+            @media screen and (max-width: 450px) {
+              display: block;
+              margin-left: 0;
+            }
           }
         }
 
