--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -18,7 +18,6 @@ body {
   font-size: 16px;
   min-height: 100vh;
   width: 100%;
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -35,12 +34,12 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow-x: visible;
 }
 
 .loader > span {
   display: inline-block;
   background-color: #f8c4a8;
-
   width: 0px;
   height: 0px;
   border-radius: 50%;
